--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<h1>haha</h1>
+<!DOCTYPE html>
+<html lang='zh-CN'>
+
+<head>
+    <meta charset='UTF-8'>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script src="./vue2.min.js"></script>
+    <title>你好，我是 WindsLeade</title>
+</head>
+
+<body>
+    <div id="root">
+        <h1>{{l[0]}}</h1>
+        <span>{{l[1]}}</span> <button @click="lFlag++">{{l[2]}}</button>
+        <p><a href="/page/tetris">{{l[3]}}</a></p>
+    </div>
+
+    <script>
+        new Vue({
+            el: '#root',
+            data: {
+                lFlag: 0,
+                cn: [
+                    '你好，我是 WindsLeade',
+                    '这个页面以后可能会进行一番装饰，但至少现在它没有',
+                    '简体中文',
+                    '俄罗斯方块'
+                ],
+                en: [
+                    'Hello, I\'am WindsLeade',
+                    'This page may be decorated in the future, but at least for now it doesn\'t',
+                    'English',
+                    'Tetris'
+                ]
+            },
+            computed: {
+                l() {
+                    switch (this.lFlag % 2) {
+                        case 0: return this.cn
+                        case 1: return this.en
+                    }
+                }
+            }
+        })
+    </script>
+</body>
+
+</html>
